Tweaked TAA again. Prevented duplicated destroy of descriptor pool in shader class.

24-11-2023: Refactored a few release workflow and removed a few .reset() calls. Added SH9 generation pass to rendering pipeline.
Next is to actually apply it to rendering.
26-11-2023: Applied SH9 lighting to object pass. Which works great! Reverted dtor release behavior, that's dangerous.
Moved all GPU time scope to the top of function, made it more sense.

29-11-2023: Minor fix for resource barrier, I forgot clearing the list after calling flush resource barrier!
Fixed async compute issue again by adding compute shader bit for the wait semaphore.

01-12-2023: Minor improvements that includes using _UNORM for miprate instead, moving velocity calculation to vertex shader
, and enhanced async compute again (start thinking it could be driver issue).
Removed jitter distance scale calculation in vertex shader. Improved TAA again by an adaptive method.
Drop history buffer format as R11G11B10 for performance. Fixed a minor issue when switching material blend mode.

02-12-2023: Minor optimizations for RT shadow. If it's already hitting a blocker, skip all other TraceRay() call. This gives extra performance save!
Raised the lowest penumbra as 1.0f instead of 0.5f. TAA reverted to color clamping method, I forgot the case that object is moving but it doesn't output motion. (E.g. Spot light.)
03-12-2023: Tested temporal RT method, doesn't work well IMO. A few RT shadows improvments.

05-12-2023: Set proper sampler to use during rendering. If it's a 1:1 ratio with resolution, point sampling should suffice.
Added half-sized depth buffer.
06-12-2023: Applied half-sized depth to RT shaders as well. Improved half-size RT shadow quality!
Reverted ambient ground lighting calculation, it will just be added to the pixel.
Fixed a minor bug of world dialog too. Fixed shader state table issues in debug build.