@@ -24,8 +24,24 @@ Size=440,708
 Collapsed=0
 
 [Window][Texture Editor]
+ViewportPos=124,87
+ViewportId=0x7361E594
+Size=1399,833
+Collapsed=0
+
+[Window][Material Editor]
+Pos=276,96
+Size=250,670
+Collapsed=0
+
+[Window][Texture2D]
 Pos=60,60
-Size=439,291
+Size=137,491
+Collapsed=0
+
+[Window][Cubemap Editor]
+Pos=60,60
+Size=239,159
 Collapsed=0
 
 [Table][0xF5C0C183,2]
@@ -33,6 +49,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xF869C367,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3F2287BA,2]
+Column 0  Weight=0.3273
+Column 1  Weight=1.6727
+
+[Table][0x9C9214A4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE3852951,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
